# rest_app

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yaml  deploy.yml  trigger-train.yml
schemas/: manifest.v1.json  pointer.v1.json
src/rest_app/: __init__.py  app.py  cli.py  config.py  contracts.py  factories.py  layout.py  loader.py  model.py  publisher.py  validation.py
src/rest_app/adapters/: github_dispatch.py  s3_store.py
src/rest_app/ports/: __init__.py  orchestration.py  storage.py
src/rest_app/schemas/: trigger.v1.json
src/rest_app/static/: trigger.html
tests/: conftest.py  test_admin_ui.py  test_contract_sync.py  test_health.py  test_loader.py  test_predict.py  test_publisher.py  test_s3_store.py  test_trigger_status.py  test_trigger_train.py  test_versions.py
