[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rest_app"
version = "0.1.0"
description = "Lean FastAPI inference service for mlops-published models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "boto3>=1.34",
    "jsonschema>=4.21",
    "loguru>=0.7",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "moto[s3]>=5",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the admin UI + JSON Schemas inside the wheel so they work after
# pip install / Docker build. validation.py loads the schemas at runtime;
# the static HTML is served by the FastAPI mount.
rest_app = ["static/*.html", "static/*.css", "static/*.js", "schemas/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
# B008: FastAPI Depends() in defaults is the canonical pattern.
# N803/N806: uppercase X for feature matrices (sklearn convention).
ignore = ["B008", "N803", "N806"]

[tool.ruff.lint.isort]
known-first-party = ["rest_app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
